@@ -2,3 +2,4 @@ DIST armadillo-4.200.0.tar.gz 5479492 SHA256 77d4c64346da9fb90d1150c290919e49530
 DIST armadillo-4.300.8.tar.gz 5484286 SHA256 1d1a77ad7a74e8b4a74d7b71c5e3fe488e26283907b316618de0a8558c60173a SHA512 3b5d6c9bcefb427e1dc15c259bd24154b6d2138a75be49275e2be5a456f4e2357852c7520b171109ee2b6a716c8ef2a19dea8c2a9b908b13fc2a1624500d54f3 WHIRLPOOL 90789113a10ca0e0264af3212f2c59f6f0b68cf726c22935433bc5d396c763143e6bd1b9d961ee6e5fd78adad3ee58bf1b532931761d9fbe51e99179beebf789
 DIST armadillo-4.300.9.tar.gz 5484297 SHA256 1cc96e7eb1cd3872c193f3954561e6d8539d2a4120235213c42c6db44b650d27 SHA512 5129c9ac8e76b6d367691380315d3f4e80e643349a9013238c0672b4d93aabc395d20b9fd95678dcc9172baa793eba5b54011bbf35f69913a7381ca2f62638d0 WHIRLPOOL a3c6c24cbbf85a585bb20c0773800f24065cf57976759543653bddbee0e09559cfad7de30829bc1b5db5583fe1d8c17112b5a463924deaaad5bebf41ec525f7f
 DIST armadillo-4.600.2.tar.gz 5347346 SHA256 d5f85cac54db16d3cf25af54460eb5fde190c81ddbb8690a6c453012934891bf SHA512 b077ad19b7a3e996e9edeceaf980bea53ecaccb012dd2438a70bfc863bd8113e8308325ca91ce033c152bc757a0ac847d81ba99d87b5e4af28ae44dc71ed595b WHIRLPOOL 1d41ab103a7b89e2c11fc4b5b0a9649a690d704dcdd073bcc2de4ddb996a560e6e397309987c848443f294e83af2ae3e269c323ff68c1c8d512ad698861fa35a
+DIST armadillo-4.600.4.tar.gz 5347594 SHA256 308835440ce3b17d7652156bad6c9fbc6f6881859e07467623676d4a35229ca8 SHA512 a7378e2fe5a4485f5df755cd3af9e54034f1a701bd185161a9945422598dd7e20327cf945075bca71d31a18eaf9f932ff39f204e96a48855ef013a962dd07fd8 WHIRLPOOL 2c0544a243f5632445a740148dfd4266a20815c017aa0f52dd20ac5c6ab9531da7ad388605c136fdacf254b724648ab0f7a0354554b85af1ed82be21f5e0ea6b
